fixed aligntment issues

--- a/style/index.css
+++ b/style/index.css
@@ -24,6 +24,10 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 
+html {
+    font-size: 62.5%;
+}
+
 /* my css begins now */
 *{
     font-family: 'Poppins', sans-serif;
@@ -64,9 +68,10 @@ h1{
     background-color: rgb(223, 223, 223);
 }
 
-.info-section {
+/* .info-section {
     font-family:'Poppins', sans-serif;
-}
+    font-size: 1.6rem;
+} */
 
 h3{
     display: flex;
@@ -74,12 +79,15 @@ h3{
     padding: 20px;
 }
 
-p{
+.info-section {
+    font-family:'Poppins', sans-serif;
+    font-size: 1.6rem;
     display: flex;
-    justify-content:center;
+    justify-content: center;
     flex-wrap: wrap;
-    padding: 2%;
-    
+    /* border: solid black; */
+    margin: 0 auto;
+    width: 80%;
 }
 
 .portfolio-section {
@@ -90,11 +98,11 @@ p{
     margin: 0 auto;
 }
 
-.project {
-    margin: .5rem;
+.portfolio-section .project {
     width: 450px;
     height: 450px;
     margin: 20px;
+    border-radius: 10px;
 }
 
 .project:hover{
